--- a/src/routes/index.scss
+++ b/src/routes/index.scss
@@ -12,7 +12,9 @@ body {
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 100vh;
-    overflow: auto;
+    overflow: hidden;
+    padding: 0.1rem;
+    margin: 0;
 }
 
 #pfp {
@@ -23,9 +25,11 @@ body {
 }
 
 main {
+    height: calc(100% - 8rem);
     text-align: center;
-    padding: 5rem;
+    padding: 4rem;
     margin: 0 auto;
+    overflow: auto;
 
     @media screen and (max-width: 40rem) {
         padding-left: 1rem;
@@ -71,4 +75,19 @@ h1 {
     100% {
         background-position: 0% 50%;
     }
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+    display: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--transparent-color);
+    border-radius: 1rem;
 }
